@startuml
skinparam linetype ortho
skinparam nodesep 100

class Room {
  - roomNumber: String
  - available: boolean
  + Room(String, boolean)
  + Room(String)
  + bookBy(guest: Guest): void
  + releaseRoom(): void
  + toString(): String
  + equals(Object): boolean
  + hashCode(): int
}

class StandardRoom {
  - bedsCount: int
  + StandardRoom(String, boolean, int)
}

class SuiteRoom {
  - hasBalcony: boolean
  + SuiteRoom(String, boolean, boolean)
}

class Guest {
  - guestId: String
  - fullName: String
  + Guest(String, String)
  + isVerified(): boolean
  + toString(): String
}

Room <|-- StandardRoom : є підтипом
Room <|-- SuiteRoom : є підтипом

Guest "1" -left-> "0..N" Room : бронює
@enduml